--- a/dna_src/zomes/notes/code/Cargo.toml
+++ b/dna_src/zomes/notes/code/Cargo.toml
@@ -12,7 +12,7 @@ hdk = "=0.0.42-alpha5"
 hdk_proc_macros = "=0.0.42-alpha5"
 holochain_wasm_utils = "=0.0.42-alpha5"
 holochain_json_derive = "=0.0.1-alpha2"
-holochain_anchors = { git = "https://github.com/holochain/holochain_anchors" , branch = "notes-updates" }
+holochain_anchors = { git = "https://github.com/holochain/holochain_anchors" , branch = "master" }
 
 [lib]
 path = "src/lib.rs"
