--- a/dna_src/zomes/notes/code/Cargo.toml
+++ b/dna_src/zomes/notes/code/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["hc-scaffold-framework"]
 edition = "2018"
 
 [dependencies]
-serde = "=1.0.89"
-serde_json = { version = "=1.0.39", features = ["preserve_order"] }
-serde_derive = "=1.0.89"
-hdk = "=0.0.42-alpha5"
-hdk_proc_macros = "=0.0.42-alpha5"
-holochain_wasm_utils = "=0.0.42-alpha5"
-holochain_json_derive = "=0.0.1-alpha2"
-holochain_anchors = { git = "https://github.com/holochain/holochain_anchors" , branch = "master" }
+serde = "=1.0.104"
+serde_json = { version = "=1.0.47", features = ["preserve_order"] }
+serde_derive = "=1.0.104"
+hdk = "=0.0.45-alpha1"
+hdk_proc_macros = "=0.0.45-alpha1"
+holochain_wasm_utils = "=0.0.45-alpha1"
+holochain_json_derive = "=0.0.23"
+holochain_anchors = { git = "https://github.com/holochain/holochain_anchors" , branch = "update-for-45" }
 
 [lib]
 path = "src/lib.rs"
