--- a/dna_src/app.json
+++ b/dna_src/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Holochain Notes App",
+  "name": "react-graphql-template",
   "description": "A template app to build RAD Tools",
   "authors": [
     {
