--- a/dna_src/zomes/notes/code/Cargo.toml
+++ b/dna_src/zomes/notes/code/Cargo.toml
@@ -12,7 +12,7 @@ hdk = "=0.0.48-alpha1"
 hdk_proc_macros = "=0.0.48-alpha1"
 holochain_wasm_utils = "=0.0.48-alpha1"
 holochain_json_derive = "=0.0.23"
-holochain_anchors = { git = "https://github.com/holochain/holochain-anchors" , branch = "master" }
+holochain_anchors = { git = "https://github.com/holochain/holochain-anchors" , branch = "update-0.0.48-alpha1" }
 
 [lib]
 path = "src/lib.rs"
